--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.8",
     "astro": "^5.8.0"
   },
   "devDependencies": {
